--- a/2.中期/万州区水运行业调研数据清单.markdown
+++ b/2.中期/万州区水运行业调研数据清单.markdown
@@ -5,50 +5,53 @@
 ## 1. 行业基本概况
 
 - **企业数量**
-  - 行业内企业总数
-  - 按规模分类的企业数量（如大型、中型、小型企业）
-  - 按所有权性质分类的企业数量（如国有、私有、合资）
+  - 注册地为万州的企业总数
+  - 按多个维度分类的企业数量：
+
+    长航安全评级：A级|B级|c级|
+
+    船队运力规模：万吨以下|1-5万吨|5万吨以上|
+
+
+    全年营收：亿元以下|1亿-5亿|5亿以上|
+
+
+    员工规模： 50人以下|50-100人|100-500人|
+
+    员工规模：国企|民企|个体|
+
 - **行业历史与发展**
-  - 行业成立年份分布
-  - 行业内企业的平均运营年限
+  - 行业内企业的平均运营年限(注册成立的平均年限)
+
 
 ---
 
-## 2. 行业财务特征（过去三年数据）
-
-- **行业总财务指标**
+## 2. 行业经营特征
+- **年度特征**
   - 行业总资产
-  - 行业总收入
-  - 行业总净利润
-  - 行业总税收贡献
+  - 行业总营收
+  - 行业总税收
   - 行业总产值
-- **行业财务健康**
-  - 行业平均净利润率
-  - 行业平均资产回报率（ROA）
-- **行业增长趋势**
-  - 行业收入增长率
-  - 行业企业数量增长率
-
 ---
 
 ## 3. 行业业务特征
 
 - **船只概况**
   - 行业内船只总数
-  - 按类型分类的船只数量（如货船、客船）
+  - 按能源类型分类的船只数量
   - 按吨位分类的船只数量
 - **货运概况**
-  - 行业总货运量（过去三年的年吨数）
+  - 行业总货运量
   - 按货物类型分类的货运量（如煤炭、集装箱）
   - 主要运营路线
-- **运营效率**
-  - 行业平均船只利用率
-  - 行业每年总航次数量
+  - 与云阳、忠县等周边区县的运力对比
 
+  |地区|万州|云阳|忠县|
+  |---|---|---|---|
+  |运力规模|  |  |  |
+  |总货运量|  |  |  |
 ---
-
 ## 4. 行业劳动力状况
-
 - **劳动力规模**
   - 行业总员工数
 - **劳动力结构**
@@ -56,17 +59,11 @@
   - 员工教育水平分布
 - **就业条件**
   - 行业平均工资水平
-  - 行业员工流失率
-
 ---
-
 ## 5. 市场与竞争状况
-
 - **市场规模**
   - 行业市场总规模
   - 行业市场增长率
 - **市场结构**
   - 市场集中度（如前五大企业的市场份额）
-  - 主要竞争对手概况
-
 ---
