--- a/2.中期/万州区水运行业调研数据清单1.1.markdown
+++ b/2.中期/万州区水运行业调研数据清单1.1.markdown
@@ -1,6 +1,21 @@
 # 万州区水运行业调研数据清单
 
----
+## 清单
+
+- **万州当前情况数据**
+  - 企业数量数据：1.总数；2.国民个企数；3.规上\规下企数；4.3A\4A评级企数
+  - 船舶运力：1.总运力；2.总船只吨位；3.按吨位标准分类的船型；4.按集散分类船型；5.按能源类型分类的船型
+  - 货运经营状况：1.货运量；2.分类货运量；3.货运全市占比；4.头部企业占比；5.税收；6.营收；7.货运价格（元/吨公里）
+- **纵向趋势分析数据**
+  - 选取上面三方面的数据做柱状图分析趋势变化
+- **横向比较分析数据**
+  - 选取上面三方面的数据做折线图分析对比变化
+
+
+
+
+
+
 
 ## 1. 行业基本概况
 
@@ -57,7 +72,7 @@
 
 ## 2. 行业经营特征
 - **年度特征**
-    行业总产值（或行业总营收）、行业总税收、总资产（可有可无）
+    行业总产值（或行业总营收）、行业总税收、总资产（待商榷）
     <table>
       <thead>
     <tr>
@@ -84,15 +99,19 @@
 
 - **船只概况**
   - 按能源类型分类的船只数量
-  - 按吨位分类的船只数量
 
+  |类型|传统动力|LNG船舶|电动船舶|其他新型燃料船舶|
+  |---|---|---|---|---|
+  |船只数量|||||
+
+  - 按吨位分类的船只数量
 
   |吨位|2000吨以下|2000-5000吨|5000吨以上|
   |---|---|---|---|
   |船只数量||||
 
 - **货运概况**
-  - 五年货运变化数据：行业总货运量、货运价格、运力
+  - 五年货运变化数据：行业总货运量、运力、货运价格
 
 <table>
   <caption>货运变化</caption>
@@ -143,14 +162,48 @@
     </tr>
   </tbody>
 </table>
-  - 万州区按货物类型分类的货运量
+  - 万州区按货物类型分类的货运量（支撑“弱”）
+
+<table>
+  <caption>万州区按货物类型分类的货运量</caption>
+  <thead>
+    <tr>
+      <th rowspan="2">年度</th>
+      <th rowspan="2">集装箱</th>
+      <th colspan="5">干散货</th>
+      <th colspan="2">散装液体危险品</th>
+    </tr>
+    <th colspan="1">煤炭</th>
+    <th colspan="1">金属矿石</th>
+    <th colspan="1">矿建材料</th>
+    <th colspan="1">非金属矿石</th>
+    <th colspan="1">粮食</th>
+    <th colspan="1">成品油</th>
+    <th colspan="1">化工品</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2020</td><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+    </tr>
+      <td>2021</td><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+    </tr>
+      <td>2022</td><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+    </tr>
+      <td>2023</td><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+    </tr>
+      <td>2024</td><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th>
+    </tr>
+  </tbody>
+<table>
+
+
 
 ---
 ## 4. 行业劳动力状况
 - **劳动力结构**
-  - 全行业员工年龄分布（人才不足）
-  - 全行业员工教育水平分布（人才不足，劳动力质量不高）
-  - 全行业劳务、劳动合同类型（待商榷，用工不规范等问题）
+  - 全行业员工年龄分布（人才不足支撑“小”）
+  - 全行业员工教育水平分布（人才不足，劳动力质量不高支撑“弱”）
+  - 全行业劳务、劳动合同类型（待商榷，用工不规范等问题支撑“弱”）
 - **就业条件**
   - 全行业行业平均工资水平五年的变化
 ---
